@@ -1,3 +1,7 @@
+2005-02-15  Roger While <simrw@sim-basis.de>
+
+	* codegen.c : Fix .. BY VALUE LENGTH OF
+
 2005-02-12  Roger While <simrw@sim-basis.de>
 
 	* tree.h, tree.c, tyepck.c, field.c, codegen.c :
